--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,15 +1,15 @@
 // COLORS
-$primary-color: #02aab0;
-$secondary-color: #00cdac;
+$primary-color: #f10404;
+$secondary-color: #1cf009;
 
 // $primary-color: #7f449d;
 // $secondary-color: #793fc1;
 
-$white-color: #fff;
+$white-color: rgb(7, 7, 7);
 
 $dark-grey: #333333;
 
-$dark-blue-text: #272341; // For Headings
+$dark-blue-text: #0af0f8; // For Headings
 
 // FONT SIZE
 $default-font-size: 1.6rem;
