working on it lol

--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -5,11 +5,11 @@ $secondary-color: #1cf009;
 // $primary-color: #7f449d;
 // $secondary-color: #793fc1;
 
-$white-color: rgb(7, 7, 7);
+$white-color: rgb(0, 0, 0);
 
-$dark-grey: #333333;
+$dark-grey: #000000;
 
-$dark-blue-text: #0af0f8; // For Headings
+$dark-blue-text: #16aaff; // For Headings
 
 // FONT SIZE
 $default-font-size: 1.6rem;
