--- a/src/style/components/_buttons.scss
+++ b/src/style/components/_buttons.scss
@@ -62,15 +62,19 @@
 
 /* Resume Style */
 .cta-btn--resume {
-  color: $white-color;
-  border: 2px solid $white-color;
+  color: #1cf009;
+  // border: 2px solid #1cf009;
+  border-width: 2px;
+  border-style: solid;
+  border-image: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
+  border-image-slice: 1;
 
   &::after {
-    background: $white-color;
+    background: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
   }
 
   &:hover {
-    color: $secondary-color;
+    color: white;
     text-decoration: none;
 
     &::after {
