--- a/src/style/layout/_footer.scss
+++ b/src/style/layout/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
   background-color: $dark-grey;
-  color: $white-color;
+  color: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
   padding: 4.8rem 0;
 
   @include respond(phone) {
@@ -45,7 +45,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    color: $white-color;
+    color: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
     font-size: 3rem;
     width: 5rem;
     height: 5rem;
@@ -59,12 +59,13 @@
 }
 
 .back-to-top i {
-  color: $white-color;
+  color: white;
   margin: 1rem 0 $default-font-size;
   transition: all 0.2s ease-in;
   cursor: pointer;
 
   &:hover {
     transform: translateY(-2px);
+    color: greenyellow
   }
 }
