--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -6,7 +6,7 @@
   border-bottom: 0px;
   background: $white-color;
   font-weight: 400;
-  color: $dark-blue-text;
+  color: linear-gradient(135deg, $primary-color 100%, $secondary-color 0%);
   padding: 0rem 5.6rem;
   margin-bottom: 0;
   top: 0;
@@ -22,6 +22,7 @@
   // background-size: cover;
 
   @include respond(phone) {
+    // color: linear-gradient(135deg, $primary-color 100%, $secondary-color 0%);
     padding: 0rem $default-font-size;
   }
 
@@ -29,7 +30,7 @@
     font-size: 5.6rem;
     font-weight: 700;
     margin-bottom: 3.2rem;
-    text-align: left;
+    text-align: center;
     color: transparent;
     background-image: url(https://media.giphy.com/media/84fFptgxiU7cY/giphy.gif);
     background-position: center;
@@ -39,6 +40,7 @@
       font-size: 4rem;
     }
     @include respond(tab-port) {
+      color: linear-gradient(135deg, $primary-color 100%, $secondary-color 0%);
       font-size: 3.6rem;
       text-align: center;
     }
@@ -52,7 +54,7 @@
   }
 
   .hero-cta {
-    display: flex;
+    // display: flex;
 
     @include respond(tab-port) {
       justify-content: center;
