--- a/src/style/sections/_projects.scss
+++ b/src/style/sections/_projects.scss
@@ -1,6 +1,6 @@
 #projects {
-  background-color: $white-color;
-  color: $dark-blue-text;
+  background-color: black;
+  color: white;
   margin-top: -15rem;
   padding-top: 15rem;
 
@@ -38,6 +38,10 @@
         font-weight: bold;
         margin-bottom: 1.8rem;
         font-size: $mid-font-size;
+        color: transparent;
+        background-image: url(https://media.giphy.com/media/84fFptgxiU7cY/giphy.gif);
+        background-position: center ;
+        -webkit-background-clip: text;
 
         @include respond(phone) {
           font-size: 2rem;
