--- a/src/style/layout/_footer.scss
+++ b/src/style/layout/_footer.scss
@@ -8,11 +8,11 @@
   }
 
   &__text {
-    color: darken(white, 50%);
+    // color: darken(white, 50%);
     font-size: 1.3rem;
 
     a {
-      color: darken(white, 50%);
+      // color: darken(white, 50%);
       font-size: 1.3rem;
       transition: all 0.4s;
       display: inline-block;
@@ -22,7 +22,7 @@
       &:active {
         color: $primary-color;
         -webkit-box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
-        box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+        box-shadow: 0 1.5rem 4rem rgba(248, 11, 11, 0.15);
       }
     }
   }
@@ -32,7 +32,7 @@
     margin-bottom: 1rem;
     border: 0;
     width: 50%;
-    border-top: 2px solid rgba(255, 255, 255, 0.1);
+    border-top: 2px solid #f10404;
   }
 }
 
