--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   border-bottom: 0px;
-  background: $white-color;
+  background: rgb(0, 0, 0);
   font-weight: 400;
   color: linear-gradient(135deg, $primary-color 100%, $secondary-color 0%);
   padding: 0rem 5.6rem;
