--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // COLORS
-$primary-color: #f10404;
-$secondary-color: #1cf009;
+$primary-color: #757575;
+$secondary-color: #ffffff;
 
 // $primary-color: #7f449d;
 // $secondary-color: #793fc1;
