--- a/src/style/base/_typography.scss
+++ b/src/style/base/_typography.scss
@@ -28,6 +28,7 @@ a:hover {
   font-size: $big-font-size;
   font-weight: bold;
   text-transform: uppercase;
+  -webkit-text-stroke: 1px rgb(129, 129, 129); /* width and color */
 
   @include respond(phone) {
     font-size: 2.8rem;
@@ -39,14 +40,18 @@ a:hover {
 }
 
 .text-color-main {
-  background-image: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
+  // background-image: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
+  background-color: rgb(255, 255, 255);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  -webkit-text-stroke: 1px rgb(192, 189, 189); /* width and color */
 
   // Responsive text purple style
   @include respond(phone) {
-    background-image: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
+    // background-image: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
+    background-color: rgb(255, 255, 255);
     -webkit-text-fill-color: transparent;
+    -webkit-text-stroke: 1px rgb(192, 189, 189); /* width and color */
   }
 
   &:hover {
