--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -32,9 +32,12 @@
     margin-bottom: 3.2rem;
     text-align: center;
     color: transparent;
+    filter: grayscale(80%);
+    // filter: invert(70%);
     background-image: url(https://media.giphy.com/media/84fFptgxiU7cY/giphy.gif);
     background-position: center;
     -webkit-background-clip: text;
+    -webkit-text-stroke: 1px rgb(129, 129, 129); /* width and color */
 
     @include respond(tab-land) {
       font-size: 4rem;
