--- a/src/style/components/_buttons.scss
+++ b/src/style/components/_buttons.scss
@@ -34,7 +34,7 @@
   // Responsive Button hero style
   @include respond(phone) {
     background-image: none;
-    border: 2px solid $secondary-color;
+    // border: 2px solid $secondary-color;
     -webkit-text-fill-color: $secondary-color;
   }
 
@@ -62,7 +62,7 @@
 
 /* Resume Style */
 .cta-btn--resume {
-  color: $primary-color;
+  color: $secondary-color;
   // border: 2px solid #1cf009;
   border-width: 2px;
   border-style: solid;
